Fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   margin: 0;
   top: 0;
   left: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 body{
  width: 99vw; 
@@ -131,6 +131,7 @@ h4{
 }
 section{
   overflow-y: auto;
+  overflow-x: unset;
   /* width: 10rem; */
 }
 .MeetUs{
@@ -545,4 +546,9 @@ position: relative;
     font-size: 14px;
     width: fit-content;
   }
+
+  /* #root {
+    width: 100%;
+    margin-inline: auto;
+  } */
  }
